Kubernetes/externalDNSTest/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: static-site
  namespace: static-site
spec:
  replicas: 2
  selector:
    matchLabels:
      static: site
  template:
    metadata:
      labels:
        static: site
    spec:
      containers:
      - name: apache
        image: httpd
        ports:
        - name: httpd
          containerPort: 80
