Kubernetes/externalDNSTest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-site-svc
  namespace: static-site
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    static: site
