Kubernetes/externalDNSTest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: static-site-rules
  namespace: static-site
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: staticapp.amritgill.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: static-site-svc
          servicePort: 80
